distortion filter calculation ready, bug:renders new position every time

--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,6 @@
   cursor: pointer;
   color: white;
 }
+.pattern{
+  color: yellow; 
+}
